# gha-poetry

./: README.md  pyproject.toml
.github/workflows/: workflow.yml
