[tool.poetry]
name = "gha-poetry"
version = "0.1.2"
description = ""
authors = ["dmingn <dmingn@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "gha_poetry"}]

[tool.poetry.dependencies]
python = "^3.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
