[tool.poetry]
name = "gha-poetry"
version = "0"
description = ""
authors = ["dmingn <dmingn@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "gha_poetry"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry-version-plugin]
source = "git-tag"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
